# stellarconduit-core

./: Cargo.toml  README.md  pr.md  pull.md
.github/workflows/: ci.yml
benches/: bloom_filter_bench.rs  gossip_bench.rs
docs/: encryption-layer.md  gossip-protocol.md  message-format.md
examples/: relay_node_submission.rs
src/: ffi.rs  lib.rs  metrics.rs
src/discovery/: errors.rs  mdns.rs  mod.rs  peer_list.rs  wifi_direct.rs
src/gossip/: bloom.rs  errors.rs  fanout.rs  mod.rs  protocol.rs  queue.rs  round.rs  strike_tracker.rs
src/message/: mod.rs  relay_proof.rs  types.rs
src/peer/: peer_node.rs  reputation.rs
src/persistence/: db.rs  errors.rs
src/relay/: dedup.rs  mod.rs  rpc_client.rs
src/router/: mod.rs  path_finder.rs  relay_router.rs  table.rs
src/security/: encryption.rs  events.rs  mod.rs  peer_ban.rs  rate_limit.rs
src/topology/: events.rs  graph.rs  health.rs
src/transport/: ble_transport.rs  mod.rs  power.rs  unified.rs  wifi_transport.rs
tests/: daemon_shutdown_test.rs  encryption_integration_test.rs  ffi_test.rs  gossip_integration_test.rs  gossip_test.rs  message_format_validation_test.rs  message_test.rs  peer_banning_test.rs  persistence_test.rs  relay_test.rs  router_test.rs  topology_test.rs
tests/integration/: double_spend_simulation_test.rs  mesh_propagation_test.rs  partition_merge_test.rs  rate_limit_test.rs  relay_routing_test.rs
