[package]
name = "stellarconduit-core"
version = "0.1.0"
edition = "2021"
description = "Core mesh networking and gossip protocol for StellarConduit"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization and messaging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"                                  # MessagePack for compact mesh payloads

# Cryptography and Identity
ed25519-dalek = "2.1.1"
rand = "0.8.5"
sha2 = "0.10.8"
snow = "0.9"
x25519-dalek = "2.0"

# Stellar / Soroban
soroban-sdk = "22.0.0"

# Async and networking basics (for WiFi-Direct / Transport abstraction)
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }
tokio-rusqlite = "0.5"

# Data structures and bloom filters for gossip deduplication
bloomfilter = "1.0.14"
lru = "0.12.3"

# Utilities
log = "0.4"
thiserror = "1.0"
chrono = "0.4"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"

# BLE transport
btleplug = "0.11"
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { version = "0.9.11", features = ["vendored"] }

# mDNS for WiFi-Direct discovery
mdns-sd = "0.11"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"  # For benchmarking
wiremock = "0.6"
serde_json = "1.0"

[[bin]]
name = "stellarconduitd"
path = "src/bin/stellarconduitd.rs"

[[bench]]
name = "gossip_bench"
harness = false

[[bench]]
name = "bloom_filter_bench"
harness = false

[[test]]
name = "mesh_propagation_test"
path = "tests/integration/mesh_propagation_test.rs"

[[test]]
name = "relay_routing_test"
path = "tests/integration/relay_routing_test.rs"

[[test]]
name = "double_spend_simulation_test"
path = "tests/integration/double_spend_simulation_test.rs"
